--- a/unicode_steganography.html
+++ b/unicode_steganography.html
@@ -11,35 +11,44 @@
 <meta charset="utf-8"/>
 <title>Unicode Steganography with Zero-Width Characters</title>
 <style>
-table { width: 100%; vertical-align: top;}
-textarea { width: 100%; height: 100px; }
-#button { width: 100px; }
+table { width: 100%; }
+.left { width: 100%; height: 100px; }
+.right { width: 100%; height: 200px; }
 </style>
 </head>
 <body>
 <h1>Unicode Steganography with Zero-Width Characters</h1>
-<table>
-<tr><td>
 <div>
-Original Text:
-<textarea id="input">ABCDEFGHIJKLMNOPQRSTUVWXYZ
-abcdefghijklmnopqrstuvwxyz
+This is plain text steganography with zero-width characters of Unicode.<br />
+Zero-width characters is inserted within the words.<br />
+<br />
+JavaScript library is below.<br />
+<a href="http://330k.github.io/misc_tools/unicode_steganography.js">http://330k.github.io/misc_tools/unicode_steganography.js</a>
+</div>
+<hr style="width: 100%;" />
+<table>
+<tr>
+<td style="width: 45%;">
+<div>
+Original Text: <span id="input_length"></span>
+<textarea id="input" class="left">The quick brown fox jumps over the lazy dog
 1234567890.:,;(*!?')
-いろはにほへと ちりぬるを 色は匂へど 散りぬるを</textarea>
+いろはにほへと ちりぬるを
+色は匂へど 散りぬるを</textarea>
 </div>
 <div>
-Hidden Text:
-<textarea id="hidden">Copyright (C) 330k</textarea>
+Hidden Text: <span id="hidden_length"></span>
+<textarea id="hidden" class="left">Where am I?</textarea>
 </div>
 </td>
-<td>
-<button id="encode">Encode</button><br />
+<td style="width: 10%; text-align: center;">
+<button id="encode">Encode</button><br /><br />
 <button id="decode">Decode</button>
 </td>
-<td>
+<td style="width: 45%; vertical-align: top;">
 <div>
-Output:
-<textarea id="output"></textarea>
+Output: <span id="output_length"></span>
+<textarea id="output" class="right"></textarea>
 </div>
 </td>
 </tr>
@@ -53,21 +62,27 @@ document.getElementById('encode').addEventListener('click', (function(){
     var text1 = document.getElementById('input').value;
     var text2 = document.getElementById('hidden').value;
     document.getElementById('output').value = encode_steganography(text1, text2);
-}), false);
+}));
 document.getElementById('decode').addEventListener('click', (function(){
     var text1 = document.getElementById('output').value;
     var result = decode_steganography(text1);
     document.getElementById('input').value = result[0];
     document.getElementById('hidden').value = result[1];
-}), false);
+}));
+
+window.setInterval(function(){
+    document.getElementById('input_length').innerText = '(length: ' + document.getElementById('input').value.length + ')';
+    document.getElementById('hidden_length').innerText = '(length: ' + document.getElementById('hidden').value.length + ')';
+    document.getElementById('output_length').innerText = '(length: ' + document.getElementById('output').value.length + ')';
+}, 100);
 </script>
 <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    
-    ga('create', 'UA-71005141-4', 'auto');
-    ga('send', 'pageview');
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-71005141-4', 'auto');
+ga('send', 'pageview');
 </script>
 </html>
