Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
 
 <p><a href="http://330k.github.io/misc_tools/unicode_steganography.html">http://330k.github.io/misc_tools/unicode_steganography.html</a></p>
 
+<h2>
+<a id="show-kml-layer-on-google-maps-gadget-for-google-sites" class="anchor" href="#show-kml-layer-on-google-maps-gadget-for-google-sites" aria-hidden="true"><span class="octicon octicon-link"></span></a>Show KML Layer on Google Maps Gadget for Google Sites</h2>
+
+<p><a href="http://330k.github.io/misc_tools/kmlmap_gadget.xml">http://330k.github.io/misc_tools/kmlmap_gadget.xml</a></p>
+
+<p>Usage:</p>
+
+<ol>
+<li>Go to Google Sites</li>
+<li>Create new page or edit page</li>
+<li>Insert external gadget from URL</li>
+<li>Disignate the above URL</li>
+<li>Input the URL to kml file to show</li>
+<li>Done!</li>
+</ol>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/330k/misc_tools">Misc tools</a> is maintained by <a href="https://github.com/330k">330k</a>.</span>
 
