--- a/unicode_steganography.html
+++ b/unicode_steganography.html
@@ -30,14 +30,14 @@ JavaScript library is below.<br />
 <tr>
 <td style="width: 45%;">
 <div>
-Original Text: <span id="input_length"></span>
+Original Text: <button id="input_clear">Clear</button> <span id="input_length"></span>
 <textarea id="input" class="left">The quick brown fox jumps over the lazy dog
 1234567890.:,;(*!?')
 いろはにほへと ちりぬるを
 色は匂へど 散りぬるを</textarea>
 </div>
 <div>
-Hidden Text: <span id="hidden_length"></span>
+Hidden Text: <button id="hidden_clear">Clear</button> <span id="hidden_length"></span>
 <textarea id="hidden" class="left">Where am I?</textarea>
 </div>
 </td>
@@ -47,7 +47,7 @@ Hidden Text: <span id="hidden_length"></span>
 </td>
 <td style="width: 45%; vertical-align: top;">
 <div>
-Output: <span id="output_length"></span>
+Output: <button id="output_clear">Clear</button> <span id="output_length"></span>
 <textarea id="output" class="right"></textarea>
 </div>
 </td>
@@ -68,6 +68,15 @@ document.getElementById('decode').addEventListener('click', (function(){
     var result = unicodeSteganographer.decodeSteganography(text1);
     document.getElementById('input').value = result[0];
     document.getElementById('hidden').value = result[1];
+}));
+document.getElementById('input_clear').addEventListener('click', (function(){
+    document.getElementById('input').value = '';
+}));
+document.getElementById('hidden_clear').addEventListener('click', (function(){
+    document.getElementById('hidden').value = '';
+}));
+document.getElementById('output_clear').addEventListener('click', (function(){
+    document.getElementById('output').value = '';
 }));
 
 window.setInterval(function(){
