--- a/unicode_steganography.html
+++ b/unicode_steganography.html
@@ -47,7 +47,7 @@ Hidden Text: <button id="hidden_clear">Clear</button> <span id="hidden_length"><
 </td>
 <td style="width: 45%; vertical-align: top;">
 <div>
-Output: <button id="output_clear">Clear</button> <span id="output_length"></span>
+Steganography Text: <button id="output_clear">Clear</button> <span id="output_length"></span>
 <textarea id="output" class="right"></textarea>
 </div>
 </td>
@@ -73,7 +73,7 @@ Characters for steganography: <br />
 <div>
 <code>setUseChars</code> sets the characters for steganography as a string.<br />
 Default characters used for steganography are U+200C, U+200D, U+202C, and U+FEFF.<br />
-U+200B(ZERO WIDTH SPACE) is deleted in Gmail when sending a mail from browser.<br />
+U+200B(ZERO WIDTH SPACE) is deleted in Gmail when sending a mail from browsers.<br />
 <br />
 <h2>Supported Browsers</h2>
 <ul>
