--- a/unicode_steganography.html
+++ b/unicode_steganography.html
@@ -9,7 +9,7 @@
 -->
 <head>
 <meta charset="utf-8"/>
-<title>Unicode Steganography with Zero-Width Characters</title>
+<title>Unicode Steganography Encoder/Decoder with Zero-Width Characters</title>
 <style>
 table { width: 100%; }
 .left { width: 100%; height: 200px; }
