--- a/unicode_steganography.html
+++ b/unicode_steganography.html
@@ -17,7 +17,7 @@ table { width: 100%; }
 </style>
 </head>
 <body>
-<h1>Unicode Steganography with Zero-Width Characters</h1>
+<h1>Unicode Steganography Encoder/Decoder with Zero-Width Characters</h1>
 <div>
 This is plain text steganography with zero-width characters of Unicode.<br />
 Zero-width characters is inserted within the words.<br />
