--- a/unicode_steganography_bin.html
+++ b/unicode_steganography_bin.html
@@ -92,7 +92,7 @@ U+200B(ZERO WIDTH SPACE) is deleted in Gmail when sending a mail from browsers.<
 </ul>
 </div>
 </body>
-<script type="text/javascript" src="unicode_steganography.js"></script>
+<script type="text/javascript" src="unicode_steganography_bin.js"></script>
 <script>
 'use strict';
 
