--- a/unicode_steganography_bin.html
+++ b/unicode_steganography_bin.html
@@ -9,7 +9,7 @@
 -->
 <head>
 <meta charset="utf-8"/>
-<title>Unicode Steganography with Zero-Width Characters</title>
+<title>Unicode Steganography with Zero-Width Characters (Binary Experimantal)</title>
 <style>
 table { width: 100%; }
 .left { width: 100%; height: 200px; }
@@ -17,13 +17,13 @@ table { width: 100%; }
 </style>
 </head>
 <body>
-<h1>Unicode Steganography with Zero-Width Characters</h1>
+<h1>Unicode Steganography with Zero-Width Characters (Binary Experimantal)</h1>
 <div>
 This is plain text steganography with zero-width characters of Unicode.<br />
 Zero-width characters is inserted within the words.<br />
 <br />
 JavaScript library is below.<br />
-<a href="http://330k.github.io/misc_tools/unicode_steganography.js">http://330k.github.io/misc_tools/unicode_steganography.js</a>
+<a href="http://330k.github.io/misc_tools/unicode_steganography_bin.js">http://330k.github.io/misc_tools/unicode_steganography_bin.js</a>
 </div>
 <hr style="width: 100%;" />
 <table>
