--- a/unicode_steganography.html
+++ b/unicode_steganography.html
@@ -43,9 +43,9 @@ Hidden Text: <button id="hidden_clear_text">Clear</button> <span id="hidden_leng
 </td>
 <td style="width: 45%; vertical-align: top;">
 <div>
-Steganography Text: <button id="output_clear_text">Clear</button> <span id="output_length_text"></span><br />
+Steganography Text: <button id="output_clear_text">Clear</button> <span id="output_length_text"></span>
+<textarea id="output_text" style="width: 100%; height: 300px;"></textarea><br />
 <a id="download_stego_text_text" download="stego_text.txt">Download Stego Text as File</a>
-<textarea id="output_text" style="width: 100%; height: 300px;"></textarea>
 </div>
 </td>
 </tr>
@@ -75,9 +75,9 @@ Hidden Data (Please Select File &lt; 50kB):
 </td>
 <td style="width: 45%; vertical-align: top;">
 <div>
-Steganography Text: <button id="output_clear_binary">Clear</button> <span id="output_length_binary"></span><br />
+Steganography Text: <button id="output_clear_binary">Clear</button> <span id="output_length_binary"></span>
+<textarea id="output_binary" style="width: 100%; height: 300px;"></textarea><br />
 <a id="download_stego_text_binary" download="stego_text.txt">Download Stego Text as File</a>
-<textarea id="output_binary" style="width: 100%; height: 300px;"></textarea>
 </div>
 </td>
 </tr>
