add zero width characters

--- a/unicode_steganography.html
+++ b/unicode_steganography.html
@@ -83,7 +83,7 @@ Steganography Text: <button id="output_clear_binary">Clear</button> <span id="ou
 </tr>
 <tr>
 <td colspan="3">
-Characters for steganography: <br />
+Zero Width Characters for steganography: <br />
 <div id="used_chars"></div>
 </td>
 </tr>
