--- a/unicode_steganography_iframe.html
+++ b/unicode_steganography_iframe.html
@@ -45,7 +45,7 @@ Steganography Text: <button id="output_clear">Clear</button> <span id="output_le
 </tr>
 </table>
 </body>
-<script type="text/javascript" src="//330k.github.io/misc_tools/unicode_steganography.js"></script>
+<script type="text/javascript" src="https://www.330k.info/misc_tools/unicode_steganography.js"></script>
 <script>
 'use strict';
 
