--- a/qrcode.html
+++ b/qrcode.html
@@ -44,6 +44,15 @@ function generateQR( size, text, level, oe ){
 }
 
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4RTVKDCC9W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4RTVKDCC9W');
+</script>
 <style type="text/css">
 *	{ margin: 0; padding: 0; font-family: sans-serif; font-size: 10pt; }
 td	{ vertical-align: bottom; }
