--- a/ndsolve.html
+++ b/ndsolve.html
@@ -581,6 +581,15 @@ function spliceResult(num){
 	return buf;
 }
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4RTVKDCC9W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4RTVKDCC9W');
+</script>
 <style type="text/css">
 *	{ margin: 0; padding: 0; font-family: sans-serif; font-size: 10pt; }
 html,body	{ height:100%; }
