--- a/unicode_steganography.html
+++ b/unicode_steganography.html
@@ -255,13 +255,13 @@ window.setInterval(function(){
   document.getElementById('output_length_binary').innerText = '(length: ' + document.getElementById('output_binary').value.length + ')';
 }, 100);
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4RTVKDCC9W"></script>
 <script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-ga('create', 'UA-71005141-4', 'auto');
-ga('send', 'pageview');
+  gtag('config', 'G-4RTVKDCC9W');
 </script>
 </html>
